namespace SDCRMS.Models.Enums
{
    public enum UserRole
    {
        Customer = 1,
        Staff = 2,
        Admin = 3,
    }
}
